spelling and spacing fixes

--- a/css/style.css
+++ b/css/style.css
@@ -146,7 +146,6 @@ header {
   font-size: 3em;
   font-weight: bold;
   text-align: center;
-  padding-bottom: 0.5em;
   -webkit-text-stroke: 1px #222;
 }
 
@@ -169,7 +168,7 @@ footer {
   flex-direction: row;
   align-items: center;
   justify-content: space-between;
-  margin: 0.5em auto 0 auto;
+  margin: 0.25em auto 0.25em auto;
   width: 100%;
 }
 .menu_link{
